# ENCS-Banking-Sim

./: .gitignore  README.md  app.js  arch_change.md  dashboard.py  hey.md  index.css  index.html  ml_pipeline.py  reconstruct_topology.py  requirements.txt  run_game_analysis.py  simulation_engine.py
.github/agents/: BankingGNN.agent.md  BankingGenAI.agent.md
.streamlit/: config.toml
backend/: .dockerignore  .env.example  .railwayignore  Dockerfile  README.md  api.py  build_and_run.sh  check_data_integrity.py  check_space_status.py  climate_output.txt  climate_output_fixed.txt  climate_risk.py  confusion_matrix.json  dashboard.py  debug_endpoint_snippet.py  debug_gnn.py  debug_serialization.py  deploy_hf.py  environment.yml  environmentmain.yml  etl_layer1_nodes.py  explain_climate_output.txt  explain_final.txt  explain_game_output.txt  explain_output.txt  explain_robust.txt  game_output_final.txt  game_output_fixed.txt  game_output_robust.txt  game_output_verbose.txt  generate_viz_data.py  gnn_model.pth  ittnotify_stub.c  llm_explain.py  llm_store.py  ml_pipeline.py  ml_pipeline_multicore.py  ml_pipeline_old_gcn.py  mlflow.db  norm_stats.pt  (+10 more)
backend/encs_rust/: Cargo.toml
backend/encs_rust/src/: lib.rs
backend/obsoletecode/: generate_viz_data.py  ml_pipeline_old_gcn.py
data/output/: country_aggregates.csv  master_nodes.csv  network_map.json
encs_rust/: pyproject.toml
encs_rust/src/: lib.rs
frontend/: .env.production  index.html  package-lock.json  package.json  vercel.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
(+67 files in other folders)
